Enable to use java preview while executing built jar file.